Kcov (6):
	* Add test program to detect regressions

	* Detect stripped binaries and report that you'll need to build
	  with -g

	* Correct --include/exclude-path behavior. The previous version
	  will match PATH*/* instead of just PATH/* (Igor Murzov)
	  
	* Various small fixes 

	-- Simon Kagstrom <simon.kagstrom@gmail.com>

Kcov (5):
	* Switch from libdwarf to libdw (from elfutils) for building
	  kcov. libdw is a bit more logical than libdwarf.
	  
	* Implement actual path matching (Igor Murzov)

	* Rename path-matching to pattern matching (which is what it does)
	  and set it up using long options.

	* Parse options with getopt

	* Don't escape all multibyte characters in the report. That will
	  break display of UTF-8 etc (Igor Murzov)

	* Improve cmake packaging support (Igor Murzov)

	-- Simon Kagstrom <simon.kagstrom@gmail.com>, Sat Feb 12 15:25:57 CET 2011

Kcov (4):
	* Build system is now based on cmake (Igor Murzov)

	* Add MIPS32, ARM and PowerPC architecture support. This is untested though
	  and might very well not work at all. 
	  
	* Add -t option to set the title of the program to test (otherwise it
	  will be the filename) 

	* Refactored the architecture support to allow running i386 programs
	  on x86_64 machines, and easier add other architectures

	* Make it possible to collect coverage from multiple programs in a
	  single directory, useful for example when running a test suite

	* Add coverage color to the header as well

	* Misc refactoring  

	-- Simon Kagstrom <simon.kagstrom@gmail.com>, Tue Dec  7 18:20:28 CET 2010

Kcov (3):
	* Various bug fixes

	* Add ability to trace running processes by PID

	* Fix copyright headers

	-- Simon Kagstrom <simon.kagstrom@gmail.com>, Sat Nov 13 08:13:03 CET 2010

Kcov (2):
	* Misc fixes

	* Add ability to specify low/high limits

	* Add state saving between runs. Re-starting the same program
	  will then add to existing coverage instead of starting from
	  scratch.

	* Link to web page in the report
